--- a/Resources-iPad/iPadMainWindow.xib
+++ b/Resources-iPad/iPadMainWindow.xib
@@ -2,10 +2,10 @@
 <archive type="com.apple.InterfaceBuilder3.CocoaTouch.iPad.XIB" version="7.10">
 	<data>
 		<int key="IBDocument.SystemTarget">0</int>
-		<string key="IBDocument.SystemVersion">10C540</string>
+		<string key="IBDocument.SystemVersion">10D573</string>
 		<string key="IBDocument.InterfaceBuilderVersion">762</string>
-		<string key="IBDocument.AppKitVersion">1038.25</string>
-		<string key="IBDocument.HIToolboxVersion">458.00</string>
+		<string key="IBDocument.AppKitVersion">1038.29</string>
+		<string key="IBDocument.HIToolboxVersion">460.00</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginVersions">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 			<string key="NS.object.0">87</string>
@@ -13,8 +13,6 @@
 		<object class="NSMutableArray" key="IBDocument.EditedObjectIDs">
 			<bool key="EncodedWithXMLCoder">YES</bool>
 			<integer value="515"/>
-			<integer value="509"/>
-			<integer value="226"/>
 		</object>
 		<object class="NSArray" key="IBDocument.PluginDependencies">
 			<bool key="EncodedWithXMLCoder">YES</bool>
@@ -287,7 +285,7 @@
 			<object class="IBUIViewController" id="586486164">
 				<string key="IBUITitle">Items</string>
 				<object class="IBUIView" key="IBUIView" id="391846926">
-					<reference key="NSNextResponder"/>
+					<nil key="NSNextResponder"/>
 					<int key="NSvFlags">274</int>
 					<object class="NSMutableArray" key="NSSubviews">
 						<bool key="EncodedWithXMLCoder">YES</bool>
@@ -362,7 +360,6 @@
 						</object>
 					</object>
 					<string key="NSFrameSize">{768, 960}</string>
-					<reference key="NSSuperview"/>
 					<object class="NSColor" key="IBUIBackgroundColor">
 						<int key="NSColorSpace">3</int>
 						<bytes key="NSWhite">MQA</bytes>
@@ -372,7 +369,6 @@
 					<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 				</object>
 				<object class="IBUINavigationItem" key="IBUINavigationItem" id="918729946">
-					<reference key="IBUINavigationBar"/>
 					<string key="IBUITitle">Items</string>
 					<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 				</object>
@@ -396,7 +392,7 @@
 						<object class="IBUITableView" id="146238131">
 							<reference key="NSNextResponder" ref="851060703"/>
 							<int key="NSvFlags">274</int>
-							<string key="NSFrameSize">{768, 960}</string>
+							<string key="NSFrameSize">{768, 886}</string>
 							<reference key="NSSuperview" ref="851060703"/>
 							<bool key="IBUIOpaque">NO</bool>
 							<bool key="IBUIClipsSubviews">YES</bool>
@@ -414,7 +410,7 @@
 						<object class="IBUIToolbar" id="340951580">
 							<reference key="NSNextResponder" ref="851060703"/>
 							<int key="NSvFlags">266</int>
-							<string key="NSFrame">{{0, 960}, {768, 44}}</string>
+							<string key="NSFrame">{{0, 886}, {768, 44}}</string>
 							<reference key="NSSuperview" ref="851060703"/>
 							<bool key="IBUIOpaque">NO</bool>
 							<bool key="IBUIClearsContextBeforeDrawing">NO</bool>
@@ -447,6 +443,12 @@
 									<int key="IBUIStyle">1</int>
 									<reference key="IBUIToolbar" ref="340951580"/>
 								</object>
+								<object class="IBUIBarButtonItem" id="615188046">
+									<string key="IBUITitle">List</string>
+									<string key="targetRuntimeIdentifier">IBIPadFramework</string>
+									<int key="IBUIStyle">1</int>
+									<reference key="IBUIToolbar" ref="340951580"/>
+								</object>
 								<object class="IBUIBarButtonItem" id="984656570">
 									<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 									<reference key="IBUIToolbar" ref="340951580"/>
@@ -461,7 +463,7 @@
 							</object>
 						</object>
 					</object>
-					<string key="NSFrameSize">{768, 1004}</string>
+					<string key="NSFrameSize">{768, 930}</string>
 					<reference key="NSSuperview"/>
 					<object class="NSColor" key="IBUIBackgroundColor">
 						<int key="NSColorSpace">3</int>
@@ -482,6 +484,7 @@
 					</object>
 					<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 				</object>
+				<object class="IBUISimulatedNavigationBarMetrics" key="IBUISimulatedTopBarMetrics"/>
 				<reference key="IBUISimulatedStatusBarMetrics" ref="682036696"/>
 				<object class="IBUISimulatedOrientationMetrics" key="IBUISimulatedOrientationMetrics">
 					<int key="interfaceOrientation">1</int>
@@ -719,10 +722,9 @@
 				<string key="targetRuntimeIdentifier">IBIPadFramework</string>
 			</object>
 			<object class="IBUISearchBar" id="746704620">
-				<reference key="NSNextResponder"/>
+				<nil key="NSNextResponder"/>
 				<int key="NSvFlags">290</int>
 				<string key="NSFrameSize">{320, 44}</string>
-				<reference key="NSSuperview"/>
 				<bool key="IBUIOpaque">NO</bool>
 				<int key="IBUIContentMode">3</int>
 				<bool key="IBUIMultipleTouchEnabled">YES</bool>
@@ -1289,6 +1291,14 @@
 					</object>
 					<int key="connectionID">590</int>
 				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchEventConnection" key="connection">
+						<string key="label">loadFileList</string>
+						<reference key="source" ref="615188046"/>
+						<reference key="destination" ref="1067888901"/>
+					</object>
+					<int key="connectionID">593</int>
+				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
 				<object class="NSArray" key="orderedObjects">
@@ -1740,6 +1750,7 @@
 							<reference ref="450331319"/>
 							<reference ref="864703851"/>
 							<reference ref="223246822"/>
+							<reference ref="615188046"/>
 						</object>
 						<reference key="parent" ref="851060703"/>
 					</object>
@@ -1801,6 +1812,11 @@
 					<object class="IBObjectRecord">
 						<int key="objectID">589</int>
 						<reference key="object" ref="223246822"/>
+						<reference key="parent" ref="340951580"/>
+					</object>
+					<object class="IBObjectRecord">
+						<int key="objectID">592</int>
+						<reference key="object" ref="615188046"/>
 						<reference key="parent" ref="340951580"/>
 					</object>
 				</object>
@@ -1909,6 +1925,7 @@
 					<string>540.IBPluginDependency</string>
 					<string>574.IBPluginDependency</string>
 					<string>589.IBPluginDependency</string>
+					<string>592.IBPluginDependency</string>
 					<string>76.CustomClassName</string>
 					<string>76.IBEditorWindowLastContentRect</string>
 					<string>76.IBLastUsedUIStatusBarStylesToTargetRuntimesMap</string>
@@ -1956,7 +1973,7 @@
 					</object>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>OzyTableViewController</string>
-					<string>{{596, 0}, {783, 756}}</string>
+					<string>{{586, -4}, {783, 756}}</string>
 					<object class="NSMutableDictionary">
 						<string key="NS.key.0">IBCocoaTouchFramework</string>
 						<integer value="0" key="NS.object.0"/>
@@ -2051,6 +2068,7 @@
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
+					<string>com.apple.InterfaceBuilder.IBCocoaTouchPlugin</string>
 					<string>OzyRotatableViewController</string>
 					<string>{{91, 19}, {320, 480}}</string>
 					<object class="NSMutableDictionary">
@@ -2081,7 +2099,7 @@
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">590</int>
+			<int key="maxID">593</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -2097,6 +2115,7 @@
 							<string>editColumns:</string>
 							<string>editDone:</string>
 							<string>increaseTableViewSize</string>
+							<string>loadFileList</string>
 							<string>nextDetailsClicked:</string>
 							<string>previousDetailsClicked:</string>
 							<string>refreshAllFiles:</string>
@@ -2109,6 +2128,7 @@
 						</object>
 						<object class="NSMutableArray" key="dict.values">
 							<bool key="EncodedWithXMLCoder">YES</bool>
+							<string>id</string>
 							<string>id</string>
 							<string>id</string>
 							<string>id</string>
@@ -2587,7 +2607,7 @@
 		</object>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencyDefaults">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.iPhoneOS</string>
-			<integer value="800" key="NS.object.0"/>
+			<integer value="528" key="NS.object.0"/>
 		</object>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDevelopmentDependencies">
 			<string key="NS.key.0">com.apple.InterfaceBuilder.CocoaTouchPlugin.InterfaceBuilder3</string>
